# QPOT2-OpenBLAS

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  future_works.md  push.to.banana.sh  push.to.furore.sh  run_bench.sh
docs/: usecase.md
src/: bench_gemm.cpp  mm_avx512_f32u8.cpp  mm_avx512_f32u8.hpp  mm_avx512_f32u8_v02.cpp  mm_avx512_f32u8_v02.hpp
src/common/: CMakeLists.txt  bench_util.hpp  pot_common.hpp
src/v01/: CMakeLists.txt  kernel_v01.cpp  kernel_v01.hpp  main.cpp
src/v02/: CMakeLists.txt  kernel_v02.cpp  kernel_v02.hpp  main.cpp
src/v03/: CMakeLists.txt  kernel_v03.cpp  kernel_v03.hpp  main.cpp
src/v04/: CMakeLists.txt  kernel_v04.cu  kernel_v04.cuh  main.cu
src/v05/: CMakeLists.txt  kernel_v05.cpp  kernel_v05.hpp  main.cpp
